--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Exam</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +12,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'layouts/navbar' %>
+
+    <main role="main" class="container-fluid">
+      <%= yield %>
+    </main>
   </body>
 </html>
