Add home, about and login/logout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,7 @@ body{
     background: linear-gradient(to top right, #1FA2FF 10%, #12D8FA 65%, #A6FFCB 125%);
   }
 }
+
+.navbar{
+  z-index: 1040;
+}
