--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Exam</title>
+    <title><%= content_for?(:title) ? yield(:title) : 'Exam'%></title>
     <meta name="viewport" content="width=device-width, user-scalable=no" />
 
     <%= csrf_meta_tags %>
