--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,13 +10,14 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav w-100">
           <%= nav_link 'Home', root_path %>
           <%= nav_link 'About', about_path %>
           <% if current_user.present? %>
-            <%= nav_link 'Logout', logout_path, method: :delete %>
+            <%= nav_link 'Logout', logout_path, class: 'text-danger', spaced: true, method: :delete %>
           <% else %>
             <%= nav_link 'Login', login_path %>
+            <%= nav_link 'Register', register_path %>
           <% end %>
         </ul>
       </div>
