Add project model and pages to manage project info

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,7 +47,15 @@ body{
     @extend .text-danger;
   }
 
-  input{
+  input.form-control, textarea.form-control{
     @extend .is-invalid;
   }
+}
+
+
+.task-subform-description{
+  margin-right: auto;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
