--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -42,30 +42,14 @@
     </div>
     <div class="col-md-4">
       <label>Tasks</label>
-      <% 3.times do |i| %>
-        <div class="form-group">
-          <div class="d-flex w-100 align-items-center">
-            <span class="task-subform-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet in sem eu posuere. N</span>
-            <%= content_tag :span, content_tag(:i, nil, class: 'fas fa-fw fa-pencil-alt'), class: 'btn btn-light', data: {target: "#edit_task_modal_#{i}", toggle: "modal"} %>
-            <%= content_tag :span, content_tag(:i, nil, class: 'fas fa-fw fa-trash'), class: 'btn btn-danger ml-2' %>
-          </div>
-        </div>
 
-        <div class="modal fade" id="edit_task_modal_<%= i %>" tabindex="-1" role="dialog" data-backdrop="static">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-              <div class="modal-body">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title for item <%= i %></h5>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-success btn-block btn-lg" data-dismiss="modal">Done</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
+      <div id="tasks">
+        <%= f.fields_for :tasks do |task_form| %>
+          <%= render partial: 'task_fields', locals: {f: task_form} %>
+        <% end %>
+      </div>
 
-
+      <%= link_to_add_association content_tag(:i, nil, class: 'fas fa-fw fa-plus'), f, :tasks ,  data: { association_insertion_node: '#tasks', association_insertion_method: :append }, render_options: {locals: { forceChild: true }}, class: 'btn btn-success btn-block'%>
     </div>
   </div>
   <%= f.submit "Save", class: 'btn btn-success btn-lg mt-3' %>
