--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,9 +1,62 @@
-
 <h1 class="d-flex w-100 align-items-center">
-  <span>Project Details</span>
+  <span>
+    Project Details (<%= project_prog_label(project) %>)
+  </span>
   <span class="ml-auto"></span>
   <%= link_to(content_tag(:i, nil, class: 'fas fa-fw fa-pencil-alt'), edit_project_path(project), class: 'btn btn-light mr-2') %>
   <%= link_to(content_tag(:i, nil, class: 'fas fa-fw fa-th-list'), projects_path, class: 'btn btn-light') %>
 </h1>
+<hr />
 
-<hr/>
+<div class="row">
+  <div class="col-12">
+    <%= project_prog_bar(project) %>
+    <small><span class="badge badge-pill badge-info"><%= project.status.humanize.upcase %></span></small>
+  </div>
+  <div class="col-md-6">
+    <div class="form-group">
+      <b>Advisor</b><br />
+      <%= render(partial: 'shared/user_detail', object: project.advisor) %>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="form-group">
+      <b>Student</b><br />
+      <%= render(partial: 'shared/user_detail', object: project.student) %>
+    </div>
+  </div>
+
+  <div class="col-md-12">
+    <div class="form-group">
+      <b>Title</b><br />
+      <%= project.title%>
+    </div>
+
+    <div class="form-group">
+      <b>Description</b><br />
+      <textarea rows="10" readonly class="form-control"><%= project.description%></textarea>
+    </div>
+  </div>
+
+  <div class="col-md-12">
+    <div class="form-group">
+      <b>Tasks</b><br />
+      <ul class="list-unstyled">
+        <% project.tasks.displayable.each do |t| %>
+        <li class="mt-3 d-flex w-100 align-items-center">
+
+          <span class="task-subform-description">
+            <%= t.title %>
+          </span>
+          <span class="ml-auto text-nowrap">
+            <%= content_tag :span, t.status.humanize, class: 'badge badge-pill badge-info' %>
+            <%= content_tag :span, t.priority.humanize, class: 'badge badge-pill badge-info' %>
+          </span>
+        </li>
+        <% end %>
+      </ul>
+
+    </div>
+  </div>
+</div>
