--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,3 +70,32 @@ body{
   @extend .badge;
   @extend .badge-light;
 }
+
+
+// credits to https://codepen.io/igorsheg/pen/MBpwGw
+.pulse-error{
+  animation: pulse-error 3s infinite;
+  &:hover{
+    animation: none;
+  }
+}
+
+@-webkit-keyframes pulse-error {
+    0% { -webkit-box-shadow: 0 0 0 0 rgba(204, 44, 44, 0.4); }
+   70% { -webkit-box-shadow: 0 0 0 3px rgba(204, 44, 44, 0); }
+  100% { -webkit-box-shadow: 0 0 0 0 rgba(204, 44, 44, 0); }
+}
+@keyframes pulse-error {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(204, 44, 44, 0.4);
+    box-shadow: 0 0 0 0 rgba(204, 44, 44, 0.4);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 3px rgba(204, 44, 44, 0);
+      box-shadow: 0 0 0 3px rgba(204, 44, 44, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(204, 44, 44, 0);
+      box-shadow: 0 0 0 0 rgba(204, 44, 44, 0);
+  }
+}
