--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,7 +3,7 @@
     Project Details (<%= project_prog_label(project) %>)
   </span>
   <span class="ml-auto"></span>
-  <%= link_to(content_tag(:i, nil, class: 'fas fa-fw fa-pencil-alt'), edit_project_path(project), class: 'btn btn-light mr-2') %>
+  <%= link_to(content_tag(:i, nil, class: 'fas fa-fw fa-pencil-alt'), edit_project_path(project), class: 'btn btn-light mr-2') if can_edit_project? %>
   <%= link_to(content_tag(:i, nil, class: 'fas fa-fw fa-th-list'), projects_path, class: 'btn btn-light') %>
 </h1>
 <hr />
@@ -43,7 +43,7 @@
     <div class="form-group">
       <b>Tasks</b><br />
       <ul class="list-unstyled">
-        <% project.tasks.displayable.each do |t| %>
+        <% project.tasks.displayable.order(:status).each do |t| %>
         <li class="mt-3 d-flex w-100 align-items-center">
 
           <span class="task-subform-description">
