--- a/app/views/projects/_task_fields.html.erb
+++ b/app/views/projects/_task_fields.html.erb
@@ -42,7 +42,7 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-success btn-block btn-lg" data-dismiss="modal">
             Done
-            <span class="shortcut">[Enter]</span>
+            <kbd><kbd>enter</kbd></kbd>
           </button>
         </div>
       </div>
